--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.13.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
